@@ -1,4 +1,8 @@
 2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
+	* Added a check in VCFrame::scram() to prevent bottom frame deletion.
+	* Removed VCFrame::init()
+
+2007-Sep-23  Heikki Junnila <hjunnila@users.sf.net>
 	* Created VCSlider, a refactored version of VCDockSlider.
 	* Created properties dialog for VCSlider.
 	* Added type getter to Fixture.
